Wed Oct 08 21:55:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The Get Information button works in IMs.

Wed Oct 08 21:30:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAction.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added protocol-specific actions in the buddy context-sensitive menu.

Wed Oct 08 20:44:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAction.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* gaim.pro:
	  - Added QGaimAction, which is like QAction but can pass user data
	    to the activated() slot.
	  - Added a list of buddies in a contact's context-sensitive menu.

Wed Oct 08 18:37:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added support for aliasing buddies.

Wed Oct 08 00:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Chats can now be auto-joined on connect.

Wed Oct 08 00:27:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added the Alias Chat dialog.

Tue Oct 07 22:43:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - The Join Chat and Remove Chat now works in the menu.

Tue Oct 07 21:37:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* gaim.pro:
	  - Fixed a crash with chats in the buddy list.
	  - Added the beginnings of the context-sensitive menu for chats.

Tue Oct 07 21:11:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	  - The Add Buddy and Add Chat in the Add menu work again.

Tue Oct 07 20:32:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp: