@@ -1,3 +1,9 @@
+Wed Oct 08 23:38:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Fixed a crash when loading a buddy list that has Show Offline
+	    Buddies set. I'm glad that didn't slip into release.
+
 Wed Oct 08 21:55:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
